welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:1: error: Missing closing brace `}' assumed here
def lastDigit(a:Int, b:Int):Boolean = {
^